[gd_scene load_steps=9 format=3 uid="uid://bdjqslatj4fqm"]

[ext_resource type="Script" path="res://game/game.gd" id="1_1bvp3"]
[ext_resource type="Script" path="res://main/main.gd" id="1_7mycd"]
[ext_resource type="Script" path="res://game/playfield.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://cei2q28bymy4y" path="res://main/main_menu.tscn" id="1_lquwl"]
[ext_resource type="Script" path="res://game/ball.gd" id="2_1bvp3"]
[ext_resource type="Script" path="res://game/paddle.gd" id="3_lquwl"]

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_kfbq2"]
font_size = 48

[node name="Main" type="Node2D"]
script = ExtResource("1_7mycd")
metadata/_edit_lock_ = true

[node name="Game" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("1_1bvp3")

[node name="Playfield" type="Node2D" parent="Game"]
position = Vector2(576, 324)
script = ExtResource("1_h2yge")
extent_x = 450.0
extent_y = 240.0
metadata/_edit_lock_ = true

[node name="Player1Score" type="Label" parent="Game"]
offset_left = 126.0
offset_top = 84.0
offset_right = 576.0
offset_bottom = 324.0
label_settings = SubResource("LabelSettings_1bvp3")
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="Game"]
offset_left = 576.0
offset_top = 84.0
offset_right = 1026.0
offset_bottom = 324.0
label_settings = SubResource("LabelSettings_1bvp3")
horizontal_alignment = 1

[node name="Ball" type="Node2D" parent="Game"]
position = Vector2(576, 324)
script = ExtResource("2_1bvp3")
metadata/_edit_lock_ = true

[node name="Player1Paddle" type="Node2D" parent="Game"]
position = Vector2(166, 324)
script = ExtResource("3_lquwl")
_color = Color(0.87, 0.22, 0.29, 1)
extent_x = 10.0
extent_y = 75.0
metadata/_edit_lock_ = true

[node name="Player2Paddle" type="Node2D" parent="Game"]
position = Vector2(986, 324)
script = ExtResource("3_lquwl")
_color = Color(0.18, 0.5, 1, 1)
extent_x = 10.0
extent_y = 75.0
metadata/_edit_lock_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MessageBox" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "MESSAGE_GET_READY"
label_settings = SubResource("LabelSettings_kfbq2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressStartMessage" type="Label" parent="UI/MessageBox"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 0
text = "MESSAGE_PRESS_START"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MainMenu" parent="UI" instance=ExtResource("1_lquwl")]
layout_mode = 1

[connection signal="over" from="Game" to="." method="_on_game_over"]
[connection signal="requested_menu" from="Game" to="UI/MainMenu" method="show"]
[connection signal="requested_new_game" from="UI/MainMenu" to="." method="_on_main_menu_requested_new_game"]
[connection signal="requested_quit_game" from="UI/MainMenu" to="." method="_on_main_menu_requested_quit_game"]
[connection signal="requested_unpause" from="UI/MainMenu" to="." method="_on_main_menu_requested_unpause"]
